# cytadel-scan

./: .dockerignore  .env.example  .gitignore  AUTHORIZED_USE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/brand/: make-logo-datauri.py
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
docker/: README.md  docker-compose.scanner-unprivileged.yml  docker-compose.scanner.yml  docker-compose.yml
docker/ftp/: .dockerignore  Dockerfile  banner.txt  vsftpd.conf
docker/scanner/: .dockerignore  Dockerfile
docker/sidecar/: Dockerfile
docker/ssh-sshv1-stub/: Dockerfile  stub.sh
docker/ssh-vulnerable/: Dockerfile  entrypoint.sh  sshd_config
docker/telnet/: Dockerfile
docker/tls-legacy/: Dockerfile  entrypoint.sh  gen-certs.sh
docker/web/: Dockerfile  gen-certs.sh  nginx.conf
docs/: INSTALL.md  architecture.md  build-plan.md  plugin-authoring.md
docs/contracts/: cpe-matching.md  db-schema.md  kb-schema.md  plugin-api.md
include/cytadel/core/: version.h  worker_pool.h
include/cytadel/db/: db.h  epss_ingest.h  epss_sync.h  kev_ingest.h  kev_sync.h  nvd_catchup.h  nvd_ingest.h  nvd_sync.h  scan_persist.h
include/cytadel/kb/: kb.h
include/cytadel/match/: cpe_match.h  version_compare.h
include/cytadel/net/: capability.h  cidr.h  discovery.h  host_scan.h  nvd_fetch.h  port_range.h  port_scanner.h  scan_backend.h  scan_types.h  service_detect.h  target.h  target_list.h  targets_file.h  tcp_connect.h
include/cytadel/plugin/: plugin.h
include/cytadel/report/: escape.h  report.h
packaging/: README.md  cytadel.env.example
packaging/cron/: cytadel-sync-cron-wrapper.sh  cytadel-sync.cron
packaging/systemd/: cytadel-sync.service  cytadel-sync.timer
plugins/: README.md  db_exposed_cleartext.lua  ftp_anonymous_banner_hint.lua  ftp_cleartext_protocol.lua  http_directory_listing.lua  http_headers.lua  http_insecure_cookie_flags.lua  http_known_vulnerable_server.lua  http_missing_csp.lua  http_missing_hsts.lua  http_missing_xcto.lua  http_missing_xfo.lua  http_server_version_disclosure.lua  ssh_known_vulnerable_openssh.lua  ssh_sshv1_supported.lua  ssh_version_disclosure.lua  telnet_cleartext_protocol.lua  tls_cert_expired.lua  tls_cert_hostname_mismatch.lua  tls_cert_not_yet_valid.lua  tls_cert_self_signed.lua  tls_deprecated_protocol.lua  tls_weak_cipher.lua  tls_weak_key_size.lua  tls_weak_sig_alg.lua
src/cli/: CMakeLists.txt  auth_gate.c  auth_gate.h  banner.c  banner.h  cli_args.c  cli_args.h  main.c  report_cmd.c  report_cmd.h  scan_wiring.c  scan_wiring.h  sync_cmd.c  sync_cmd.h
src/core/: CMakeLists.txt  worker_pool.c
src/db/: CMakeLists.txt  cve_id_valid.h  db.c  db_migrations.c  db_migrations.h  epss_ingest.c  epss_sync.c  kev_ingest.c  kev_sync.c  nvd_catchup.c  nvd_ingest.c  nvd_sync.c  scan_persist.c
src/kb/: CMakeLists.txt  kb.c  kb_validate.c  kb_validate.h
src/log/: CMakeLists.txt  log.c  log.h  strerror_safe.c  strerror_safe.h
src/match/: CMakeLists.txt  cpe_match.c  version_compare.c
src/net/: CMakeLists.txt  banner_grab.c  banner_grab.h  capability.c  cidr.c  cpe_map.c  cpe_map.h  discovery.c  host_scan.c  http_probe.c  http_probe.h  icmp_probe.c  icmp_probe.h  nvd_fetch.c  port_range.c  port_scanner.c  scan_backend.c  scan_types.c  service_detect.c  svc_ftp.c  svc_ftp.h  svc_ssh.c  svc_ssh.h  svc_token.c  svc_token.h  target.c  target_list.c  targets_file.c  tcp_connect.c  tcp_ping.c  tcp_ping.h  tls_inspect.c  tls_inspect.h  tls_session.c  tls_session.h
src/plugin/: CMakeLists.txt  api_functions.h  api_http.c  api_kb.c  api_log.c  api_report.c  api_socket.c  api_socket.h  debug_support.c  debug_support.h  depgraph.c  depgraph.h  fd_tracker.c  fd_tracker.h  field_utils.c  field_utils.h  finding.c  finding_internal.h  invoke.c  invoke.h  loader.c  loader.h  lua_smoke.c  plugin_ctx.h  plugin_header.c  plugin_header.h  plugin_limits.h  register.c  register.h  registry.c  registry_internal.h  sandbox.c  sandbox.h  scheduler.c  timeout_clamp.c  timeout_clamp.h
src/report/: CMakeLists.txt  escape.c  logo_data_uri.h  report_html.c  report_json.c  report_scan_lookup.c
tests/integration/: CMakeLists.txt  run_integration_test.sh  run_unprivileged_fallback_test.sh
tests/integration/fixtures/: seed.sql
tests/plugins/fixtures/dep_cycle/: cycle_a.lua  cycle_b.lua
tests/plugins/fixtures/dep_missing/: missing_dep.lua
tests/plugins/fixtures/dep_order/: a_settings.lua  b_gather.lua
tests/plugins/fixtures/env_isolation/: leak.lua
tests/plugins/fixtures/env_metatable_attack/: attack.lua  sibling_ok.lua
tests/plugins/fixtures/fix2_zero_timeout/: zero_timeout_recv.lua
tests/plugins/fixtures/http_api/: http_test.lua
tests/plugins/fixtures/http_api_cap/: cap_test.lua
tests/plugins/fixtures/http_headers_leak_loop/: bad_header_value.lua
tests/plugins/fixtures/http_smuggle/: smuggle_crlf.lua  smuggle_legit.lua  smuggle_space.lua
tests/plugins/fixtures/invoke_run_error/: run_error.lua
tests/plugins/fixtures/registration_bad_header/: bad.lua
tests/probes/: README.md  probe_algebra.c  probe_cpe.c  probe_escape.c  probe_vercmp.c
tests/unit/: CMakeLists.txt  check_invoke_lua_close_invariant.c  cytadel_test.h  test_auth_gate.c  test_banner.c  test_cidr.c  test_cli_args.c  test_cpe_match.c  test_db.c  test_discovery.c  test_epss_ingest.c  test_epss_sync.c  test_host_scan.c  test_kb.c  test_kev_ingest.c  test_kev_sync.c  test_log.c  test_log_thread_safety.c  test_nvd_catchup.c  test_nvd_ingest.c  test_nvd_sync.c  test_plugin_c1_http_smuggling.c  test_plugin_fix1_double_close_race.c  test_plugin_fix2_zero_timeout.c  test_plugin_lua_embed.c  test_plugin_network.c  test_plugin_r3c1_env_metatable_abort.c  test_plugin_r3c1_raw_getfield.c  test_plugin_r3w1_untracked_fd_close.c  test_plugin_r3w2_double_close_guard.c  test_plugin_r4c1_loader_run_lookup.c  test_plugin_r4w1_guard_survives_free.c  test_plugin_r4w2_order_invariant.c  test_plugin_registry.c  test_plugin_runtime_limit.c  test_plugin_sandbox.c  test_plugin_scheduler.c  test_plugin_w1_timeout_clamp.c  test_plugin_w2_fd_force_close.c  test_plugin_w2_metatable_lock.c  (+21 more)
(+23 files in other folders)
